vcs/specs/parser/fail/expressions/unclosed_closure_params.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, closure, params, unclosed, error
// @description: Closure parameter list missing closing pipe
// @expected-error: E018

fn test() {
    let f = |x, y x + y;  // Missing closing |
}
